--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
 }
 
 .section-title .title-line {
-	color: #93ce54;
+	color: #14B316;
 	position: relative;
 }
 
@@ -173,7 +173,7 @@
 }
 
 #header-top i {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 15px;
 	margin-right: 2px;
 }
@@ -189,7 +189,7 @@
 #header-area .header-social-icons a:hover i.fa,
 #header-area .mainmenu ul li.active a,
 #header-area .mainmenu ul li:hover a {
-	color: #93ce54;
+	color: #14B316;
 }
 
 header.fixTotop #header-top {
@@ -215,7 +215,9 @@ header.fixTotop #header-bottom {
 
 .logo {
 	display: inline-block;
+    width : 75%;
 }
+
 
 .mainmenu ul li {
 	float: left;
@@ -276,7 +278,7 @@ header.fixTotop #header-bottom {
 
 .mainmenu ul li ul li.active a,
 .mainmenu ul li ul li a:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 #header-bottom .container {
@@ -292,7 +294,7 @@ header.fixTotop #header-bottom {
 }
 
 a.slicknav_btn {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border-radius: 2px;
 	height: 35px;
 	margin: 0;
@@ -329,7 +331,7 @@ a.slicknav_btn {
 
 .slicknav_nav {
 	background-color: #000;
-	border-top: 1px solid #93ce54;
+	border-top: 1px solid #14B316;
 	position: absolute;
 	top: 65px;
 	width: 100%;
@@ -346,7 +348,7 @@ a.slicknav_btn {
 
 .slicknav_nav ul li.slicknav_parent a:hover,
 .slicknav_nav ul li a:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border-radius: 0px;
 }
 
@@ -399,7 +401,7 @@ a.slicknav_btn {
 
 .book-a-car input,
 .book-a-car select {
-	border-color: #93ce54;
+	border-color: #14B316;
 	border-radius: 0;
 	font-size: 14px;
 	height: 45px;
@@ -408,7 +410,7 @@ a.slicknav_btn {
 
 .book-a-car input:focus,
 .book-a-car select:focus {
-	border-color: #93ce54;
+	border-color: #14B316;
 }
 
 .book-a-car input {
@@ -417,7 +419,7 @@ a.slicknav_btn {
 
 .book-a-car .pick-up-date span.input-group-append {
 	background-color: #fff;
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 }
 
 .book-a-car .pick-up-date span.input-group-append {
@@ -425,13 +427,13 @@ a.slicknav_btn {
 }
 
 .book-a-car .pick-up-date span.input-group-append i.fa {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 18px;
 	line-height: 33px;
 }
 
 .book-now-btn {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #222;
 	display: inline-block;
 	font-size: 15px;
@@ -447,12 +449,12 @@ a.slicknav_btn {
 }
 
 .gj-calendar-bootstrap table tr td.today div {
-	color: #93ce54
+	color: #14B316
 }
 
 .gj-calendar-bootstrap table tr td.selected div {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 }
 
 .slider-right-text {
@@ -461,7 +463,7 @@ a.slicknav_btn {
 }
 
 .slider-right-text h1 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 45px;
 	margin-bottom: 10px;
 }
@@ -483,7 +485,7 @@ a.slicknav_btn {
 }
 
 .about-btn a {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border-radius: 50px;
 	color: #fff;
 	display: inline-block;
@@ -557,13 +559,13 @@ a.slicknav_btn {
 
 .service-item i.fa {
 	font-size: 55px;
-	color: #93ce54;
+	color: #14B316;
 }
 
 .service-container-wrap .service-item {
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	padding: 50px 20px;
 }
 
@@ -588,7 +590,7 @@ a.slicknav_btn {
 }
 
 .service-icon:after {
-	border-left: 1px solid #93ce54;
+	border-left: 1px solid #14B316;
 	content: "";
 	height: 0%;
 	left: 0;
@@ -599,7 +601,7 @@ a.slicknav_btn {
 }
 
 .service-icon:before {
-	border-bottom: 1px solid #93ce54;
+	border-bottom: 1px solid #14B316;
 	content: "";
 	height: 0%;
 	right: 0;
@@ -622,7 +624,7 @@ a.slicknav_btn {
 }
 
 .service-icon span::after {
-	border-top: 1px solid #93ce54;
+	border-top: 1px solid #14B316;
 	content: "";
 	left: 0;
 	position: absolute;
@@ -633,7 +635,7 @@ a.slicknav_btn {
 }
 
 .service-icon span::before {
-	border-right: 1px solid #93ce54;
+	border-right: 1px solid #14B316;
 	content: "";
 	height: 0%;
 	position: absolute;
@@ -688,7 +690,7 @@ a.slicknav_btn {
 }
 
 .funfact-icon {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 50px;
 }
 
@@ -720,7 +722,7 @@ a.slicknav_btn {
 }
 
 .choose-content-wrap .nav-tabs {
-	border-bottom: 3px solid #93ce54;
+	border-bottom: 3px solid #14B316;
 }
 
 .choose-content-wrap .nav-tabs li a {
@@ -737,8 +739,8 @@ a.slicknav_btn {
 }
 
 .choose-content-wrap .nav-tabs li a.active {
-	background-color: #93ce54 !important;
-	background-color: #93ce54 !important;
+	background-color: #14B316 !important;
+	background-color: #14B316 !important;
 	color: #fff!important;
 }
 
@@ -783,8 +785,8 @@ a.slicknav_btn {
 
 .popucar-menu a:hover,
 .popucar-menu a.active {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 	color: #fff;
 }
 
@@ -879,7 +881,7 @@ a.slicknav_btn {
 }
 
 .single-popular-car h3 span.price {
-	color: #93ce54;
+	color: #14B316;
 	float: right;
 	font-size: 14px;
 	font-weight: 700;
@@ -904,9 +906,9 @@ a.slicknav_btn {
 }
 
 .p-car-feature a:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
-	border-color: #93ce54;
+	border-color: #14B316;
 }
 
 
@@ -952,8 +954,8 @@ a.slicknav_btn {
 
 .newcar-menu a:hover,
 .newcar-menu a.active {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 	color: #fff;
 }
 
@@ -987,7 +989,7 @@ a.slicknav_btn {
 }
 
 .single-new-car h3 span.price {
-	color: #93ce54;
+	color: #14B316;
 	float: right;
 	font-size: 14px;
 	font-weight: 700;
@@ -1075,7 +1077,7 @@ a.slicknav_btn {
 
 .single-testimonial::after {
 	background-color: #1e2228;
-	border-left: 4px solid #93ce54;
+	border-left: 4px solid #14B316;
 	content: "";
 	height: 100%;
 	left: -48px;
@@ -1088,7 +1090,7 @@ a.slicknav_btn {
 }
 
 .client-logo {
-	border: 4px solid #93ce54;
+	border: 4px solid #14B316;
 	height: 105px;
 	left: -70px;
 	position: absolute;
@@ -1099,7 +1101,7 @@ a.slicknav_btn {
 }
 
 .single-testimonial h3 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 15px;
 	margin-top: 10px;
 	text-transform: uppercase;
@@ -1111,7 +1113,7 @@ a.slicknav_btn {
 }
 
 .testimonial-content .owl-dots div.owl-dot {
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	border-radius: 10px;
 	display: inline-block;
 	height: 5px;
@@ -1122,7 +1124,7 @@ a.slicknav_btn {
 }
 
 .testimonial-content .owl-dots div.owl-dot.active {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 
@@ -1155,7 +1157,7 @@ a.slicknav_btn {
 }
 
 .mobile-app-content h2 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 70px;
 }
 
@@ -1170,7 +1172,7 @@ a.slicknav_btn {
 }
 
 .app-btns a {
-	border: 2px solid #93ce54;
+	border: 2px solid #14B316;
 	border-radius: 50px;
 	color: #fff;
 	display: inline-block;
@@ -1186,7 +1188,7 @@ a.slicknav_btn {
 }
 
 .app-btns a:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 #mobileapp-video-bg {
@@ -1252,15 +1254,15 @@ a.slicknav_btn {
 }
 
 .article-meta a span {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .article-meta a:hover {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .article-date {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border-radius: 3px;
 	color: #fff;
 	font-weight: 700;
@@ -1284,7 +1286,7 @@ a.slicknav_btn {
 
 .readmore-btn {
 	background-color: #222;
-	color: #93ce54;
+	color: #14B316;
 	display: inline-block;
 	font-size: 12px;
 	font-weight: 700;
@@ -1300,7 +1302,7 @@ a.slicknav_btn {
 
 .readmore-btn:focus,
 .readmore-btn:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 }
 
@@ -1309,7 +1311,7 @@ a.slicknav_btn {
 /*== Footer Area CSS Start ==*/
 
 #footer-area a {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .footer-widget-area {
@@ -1323,7 +1325,7 @@ a.slicknav_btn {
 }
 
 .singlefooter-widget h2 {
-	border-bottom: 1px dashed #93ce54;
+	border-bottom: 1px dashed #14B316;
 	display: inline-block;
 	font-size: 25px;
 	font-weight: 600;
@@ -1359,7 +1361,7 @@ a.slicknav_btn {
 
 .newsletter-area input {
 	background-color: transparent;
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	border-radius: 2px;
 	color: #fff;
 	height: 55px;
@@ -1369,7 +1371,7 @@ a.slicknav_btn {
 }
 
 .newsletter-area .newsletter-btn {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border: 0 none;
 	color: #fff;
 	cursor: pointer;
@@ -1415,7 +1417,7 @@ a.slicknav_btn {
 }
 
 .recent-post li:hover i {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 .recent-post li {
@@ -1451,12 +1453,12 @@ a.slicknav_btn {
 }
 
 .recent-post li:hover i {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 
 .get-touch {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 15px;
 	font-weight: 600;
 	line-height: 2.5;
@@ -1468,7 +1470,7 @@ a.slicknav_btn {
 }
 
 .map-show {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #000 !important;
 	display: inline-block;
 	font-size: 13px;
@@ -1557,7 +1559,7 @@ body,
 }
 
 .slideshowcontent h1 {
-	color: #93ce54;
+	color: #14B316;
 	margin-bottom: 20px;
 }
 
@@ -1644,15 +1646,15 @@ body,
 }
 
 .bookcar-btn:hover {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 }
 
 
 .book-ur-car .input-group-append i.fa {
 	font-size: 15px !important;
 	line-height: 30px;
-	color: #93ce54;
+	color: #14B316;
 }
 
 .book-ur-car select option {
@@ -1691,7 +1693,7 @@ body,
 }
 
 .about-feature-item i.fa {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 25px;
 	-webkit-transition: all 0.4s ease 0s;
 	transition: all 0.4s ease 0s;
@@ -1699,7 +1701,7 @@ body,
 
 .about-feature-item:hover,
 .about-feature-item.active {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 }
 
@@ -1727,7 +1729,7 @@ body,
 }
 
 .home2-car-filter a.active {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .home2-car-filter a::after {
@@ -1743,7 +1745,7 @@ body,
 }
 
 .home2-car-filter a.active::after {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 /*== Car Choose Area CSS ==*/
@@ -1781,7 +1783,7 @@ body,
 
 #help-desk-page-wrap .team-tab-menu li a.active,
 #team-area .team-tab-menu li a.active {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 #help-desk-page-wrap .team-tab-menu li a.active .team-mem-icon img,
@@ -1795,7 +1797,7 @@ body,
 }
 
 .team-mem-icon img {
-	border: 2px solid #93ce54;
+	border: 2px solid #14B316;
 	border-radius: 50%;
 	height: 100%;
 	width: 100%;
@@ -1840,7 +1842,7 @@ body,
 }
 
 .team-member-info h4 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 22px;
 	margin-bottom: 10px;
 	text-transform: uppercase;
@@ -1864,7 +1866,7 @@ body,
 }
 
 .team-social-icon a {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 	display: inline-block;
 	font-size: 18px;
@@ -1926,17 +1928,17 @@ body,
 
 .booka-car-content input,
 .booka-car-content select {
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	width: 100%;
 }
 
 .booka-car-content input:focus,
 .booka-car-content select:focus {
-	border-color: #93ce54;
+	border-color: #14B316;
 }
 
 .booka-car-content .input-group-append {
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	border-radius: 2px;
 }
 
@@ -1950,14 +1952,14 @@ body,
 
 .booka-car-content .bookcar-btn button {
 	background-color: #fff;
-	border: 1px solid #93ce54;
+	border: 1px solid #14B316;
 	border-radius: 2px;
 	padding: 8px 0;
 	width: 100%;
 }
 
 .booka-car-content .bookcar-btn button:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 .booka-car-content .bookcar-btn {
@@ -2012,7 +2014,7 @@ body,
 }
 
 .we-do-content h3 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 22px;
 }
 
@@ -2021,7 +2023,7 @@ body,
 }
 
 .we-do-content a {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border-radius: 2px;
 	color: #000;
 	display: inline-block;
@@ -2062,7 +2064,7 @@ body,
 
 #why-choose-area .nav-tabs li a:hover,
 #why-choose-area .nav-tabs li a.active {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border: 0 none;
 	border-radius: 0;
 	color: #fff;
@@ -2123,7 +2125,7 @@ body,
 /*== Our Cars CSS ==*/
 
 .ourcar-tab-menu .nav {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border: none;
 	display: block;
 	-ms-flex-wrap: inherit;
@@ -2156,7 +2158,7 @@ body,
 }
 
 .ourcar-info h2 {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 	font-size: 28px;
 	padding: 8px 10px;
@@ -2188,7 +2190,7 @@ body,
 }
 
 .ourcar-info a.bookbtn {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 	display: block;
 	font-size: 18px;
@@ -2279,7 +2281,7 @@ body,
 
 .car-list-info h5 {
 	border-bottom: 1px solid #ddd;
-	color: #93ce54;
+	color: #14B316;
 	font-size: 15px;
 	margin-bottom: 12px;
 	margin-top: 5px;
@@ -2310,7 +2312,7 @@ body,
 }
 
 .car-info-list li::before {
-	color: #93ce54;
+	color: #14B316;
 	content: "\f14a";
 	font-family: FontAwesome;
 	margin-right: 5px;
@@ -2321,7 +2323,7 @@ body,
 }
 
 .rating {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 13px;
 	position: absolute;
 	right: 15px;
@@ -2333,7 +2335,7 @@ body,
 }
 
 .rating i.unmark:hover {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .rating i.unmark {
@@ -2352,7 +2354,7 @@ body,
 }
 
 .rent-btn:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #fff;
 }
 
@@ -2363,7 +2365,7 @@ body,
 }
 
 .page-pagi nav li a {
-	border-color: #93ce54;
+	border-color: #14B316;
 	color: #000;
 	font-weight: 600;
 	-webkit-transition: all 0.4s ease 0s;
@@ -2371,13 +2373,13 @@ body,
 }
 
 .page-pagi nav ul li.active a {
-	background-color: #93ce54 !important;
-	border-color: #93ce54 !important;
+	background-color: #14B316 !important;
+	border-color: #14B316 !important;
 }
 
 .page-pagi nav li a:hover {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 	color: #fff;
 }
 
@@ -2412,7 +2414,7 @@ body,
 }
 
 .single-sidebar h3 {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #222;
 	font-size: 18px;
 	padding: 12px 5px;
@@ -2430,7 +2432,7 @@ body,
 }
 
 .sidebar-body i.fa {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 17px;
 	margin-right: 4px;
 	text-align: center;
@@ -2438,7 +2440,7 @@ body,
 }
 
 .sidebar-body i.fa {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 17px;
 	margin-right: 4px;
 	text-align: center;
@@ -2485,7 +2487,7 @@ body,
 }
 
 .recent-tip-body a:hover {
-	color: #93ce54;
+	color: #14B316;
 }
 
 .recent-tip-body span {
@@ -2506,8 +2508,8 @@ body,
 }
 
 .sidebar-body .social-icons a i:hover {
-	background-color: #93ce54;
-	border-color: #93ce54;
+	background-color: #14B316;
+	border-color: #14B316;
 	color: #fff;
 }
 
@@ -2516,7 +2518,7 @@ body,
 ================================*/
 
 .car-details-content h2 {
-	border-bottom: 1px solid #93ce54;
+	border-bottom: 1px solid #14B316;
 	font-weight: 400;
 	margin-bottom: 20px;
 	padding-bottom: 10px;
@@ -2581,7 +2583,7 @@ body,
 }
 
 .car-preview-crousel .owl-dots div.active {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 .review-area {
@@ -2618,7 +2620,7 @@ body,
 .review-area input:focus,
 .contact-form textarea:focus,
 .review-area textarea:focus {
-	border-color: #93ce54;
+	border-color: #14B316;
 }
 
 .message-input,
@@ -2632,7 +2634,7 @@ body,
 }
 
 .input-submit button {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border: medium none;
 	cursor: pointer;
 	font-size: 12px;
@@ -2693,7 +2695,7 @@ body,
 }
 
 .service-item-content h3 {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 30px;
 	margin-bottom: 20px;
 	text-transform: uppercase;
@@ -2714,7 +2716,7 @@ body,
 
 .thme-blockquote {
 	background-color: #111;
-	color: #93ce54;
+	color: #14B316;
 	font-size: 13px;
 	font-weight: 600;
 	letter-spacing: 1.6px;
@@ -2765,7 +2767,7 @@ body,
 }
 
 .single-our-facility h3::after {
-	background-color: #93ce54;
+	background-color: #14B316;
 	bottom: 0;
 	content: "";
 	height: 2px;
@@ -2784,7 +2786,7 @@ body,
 }
 
 .single-our-facility ul li::before {
-	color: #93ce54;
+	color: #14B316;
 	content: "\f046";
 	font-family: fontawesome;
 	margin-right: 15px;
@@ -2814,7 +2816,7 @@ body,
 }
 
 .single-faq-sub-content .card-header {
-	background-color: #93ce54;
+	background-color: #14B316;
 	border: medium none;
 	border-radius: 0;
 }
@@ -2881,7 +2883,7 @@ body,
 }
 
 .pricing-details-content .single-pricing-table:hover {
-	background-color: #93ce54;
+	background-color: #14B316;
 }
 
 .pricing-details-content .single-pricing-table:hover h2 {
@@ -2917,7 +2919,7 @@ body,
 }
 
 .login-form {
-	background-color: #93ce54;
+	background-color: #14B316;
 	padding: 50px 20px 15px;
 }
 
@@ -3067,7 +3069,7 @@ body,
 }
 
 .four {
-	color: #93ce54;
+	color: #14B316;
 	font-size: 150px;
 	font-weight: 400;
 	line-height: 100%;
@@ -3098,7 +3100,7 @@ body,
 }
 
 .btn-404-home {
-	background-color: #93ce54;
+	background-color: #14B316;
 	color: #000;
 	display: inline-block;
 	font-size: 13px;
