--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 *[Master Stylesheet]
 *
 * Project: Cardoor - Car Rental HTML Template
-* Version: 
+* Version:
 * Created : 13.02.2018
 * Author Name: alen dui
 * Author URI: http://alendkidjt.com
@@ -1140,6 +1140,9 @@ a.slicknav_btn {
 #mobile-app-area #wrapper_mobileapp-video-bg .YTPOverlay {
 	background-color: rgba(0, 0, 0, 0.8);
 }
+
+#fond-app {
+	background-image: url("assets/img/slider-img/slider-img-1.jpg");
 
 #mobile-app-area::after {
 	background-image: url("assets/img/mobile-app.png");
@@ -2993,8 +2996,8 @@ body,
 }
 
 .login-with-btn {
-	background: -webkit-gradient(linear, left top, left bottom, from(#3b5998), to(#344e86));
-	background: linear-gradient(to bottom, #3b5998, #344e86);
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
+	background: linear-gradient(to bottom, #fff, #fff);
 	border-radius: 3px;
 	color: #fff;
 	display: block;
@@ -3007,8 +3010,8 @@ body,
 }
 
 .login-with-btn.facebook:hover {
-	background: -webkit-gradient(linear, left top, left bottom, from(#344e86), to(#3b5998));
-	background: linear-gradient(to bottom, #344e86, #3b5998);
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
+	background: linear-gradient(to bottom, #fff, #fff);
 }
 
 .login-with-btn.google {
@@ -3178,8 +3181,8 @@ body,
 }
 
 .driver-mem-sicons a:hover i.fa-facebook {
-	background-color: #5D82D1;
-	border-color: #5D82D1;
+	background-color: #fff;
+	border-color: #fff;
 }
 
 .driver-mem-sicons a:hover i.fa-twitter {
