--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -82,7 +82,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.6;
-    color: #333;
+    color: #14b316;
     letter-spacing: 0.8px;
 }
 
